--- a/css/ogv.css
+++ b/css/ogv.css
@@ -1,3 +1,15 @@
+header.ogvhead {
+    padding-top: 10rem;
+    padding-bottom: calc(10rem - 56px);
+    background-image: url(../img/DSCF5939.JPG);
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    opacity: 0.9;
+}
+
+}
+
 hr.gray {
     border-color: #b3b3b3
 }
@@ -43,12 +55,14 @@ a:hover {
     font-size: 40px;
     font-style: oblique;
     font-weight: bold;
+     margin-left: 10%;
 }
 
 .ogvinfo-text {
     font-family: Microsoft JhengHei;
     color: #666666;
     font-size: 20px;
+     margin-left: 10%;
 }
 
 .why-choose-text {
@@ -236,13 +250,113 @@ p.contact-2 {
     margin: 10px;
 }
 
-.btn-header{
-    margin-bottom: 10%; background-color: #f85a40;
+.btn-header {
+    margin-bottom: 10%;
+    background-color: #f85a40;
     color: white;
 }
 
-.btn-header:hover{
+.btn-header:hover {
     background-color: #fa8b79;
     color: white;
-    
+}
+
+p.fontsize {
+    font-size: 20px;
+}
+
+.ogvvideo {
+    width: 472;
+    height: 310;
+    margin-left: 12%;
+    margin-bottom: 4%;
+}
+
+.video-container {
+
+    position: relative;
+
+    padding-bottom: 56.25%;
+
+    padding-top: 30px;
+
+    height: 0;
+
+    overflow: hidden;
+    margin: 10%;
+
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+
+    position: absolute;
+
+    top: 0;
+    left: 0;
+
+    width: 100%;
+
+    height: 100%;
+}
+
+
+@media screen and (max-width:480px) {
+
+    header.ogvhead {
+        padding-top: 10rem;
+        padding-bottom: calc(10rem - 56px);
+        background-image: url(../img/DSCF5939.JPG);
+        background-position: center center;
+        background-size: cover;
+        background-attachment: fixed;
+        opacity: 0.9;
+        height: 100%;
+        width: 100%;
+
+    }
+
+    h1.fontsize {
+        font-size: 36px;
+    }
+
+    p.fontsize {
+        font-size: 8px;
+    }
+
+    .btn {
+        height: 5%;
+    }
+
+    .ogvvideo {
+        width: 100%;
+        height: 50%;
+        align-items: center;
+        float: none;
+    }
+
+    .ogvinfo-title {
+        font-family: Microsoft JhengHei;
+        color: #666666;
+        font-size: 20px;
+        font-style: oblique;
+        font-weight: bold;
+        margin: 5%;
+        margin-bottom: 0;
+        margin-left: 10%;
+    }
+
+    .ogvinfo-text {
+        font-family: Microsoft JhengHei;
+        color: #666666;
+        font-size: 14px;
+        margin: 5%;
+        margin-top: 0;
+        margin-left: 10%;
+
+    }
+}
+
+
 }
