0818 fixed ogv photo bugs

--- a/css/ogv.css
+++ b/css/ogv.css
@@ -1,11 +1,12 @@
 header.ogvhead {
     padding-top: 10rem;
     padding-bottom: calc(10rem - 56px);
-    background-image: url(../img/DSCF5939.JPG);
+    background-image: url(../img/ogv-header.jpg);
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
-    opacity: 0.9;
+    opacity: 0.8;
+    height: 100%;
 }
 
 hr{
