--- a/css/oge.css
+++ b/css/oge.css
@@ -48,7 +48,8 @@ header.ogelanding{
     background-image:url(../img/ogeheader.jpg);
     background-attachment:fixed;
     background-position:center center;
-    background-size:cover
+    background-size:cover;
+    height: 100%;
 }
 header.masthead hr{
     margin-top:30px;
@@ -279,6 +280,10 @@ p.contact-2{
     font-size:16px;
     margin: 10px;
 }
+h1.fontsize {
+    font-size: 60px;
+}
+
 p.fontsize {
     font-size: 20px;
 }
