--- a/css/ogt.css
+++ b/css/ogt.css
@@ -4,240 +4,276 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
  */
 
-body{
+body {
     width: 100%;
-  
+
     overflow-x: hidden;
 }
 
-hr{
-    max-width:100%;
-    border-width:1px;
+hr {
+    max-width: 100%;
+    border-width: 1px;
     align-content: left;
-    border-color:rgb(240, 95, 64)
-
-}
-hr.light{
-    border-color:#fff
-}
-hr.gray{
-    border-color:#b3b3b3
-
-}
-a{
-    color:#f05f40;
-    -webkit-transition:all .2s;transition:all .2s
-}
-a:hover{
-    color:#f05f40
+    border-color: rgb(240, 95, 64)
 }
 
-section{
-    padding:6rem 0
+hr.light {
+    border-color: #fff
 }
 
-.section-heading{
-    margin-top:0;
+hr.gray {
+    border-color: #b3b3b3
 }
 
-header.ogtlanding{
-    padding-top:0rem;
-    padding-bottom:calc(7rem - 56px);
-    background-image:url(../img/gt_default.png);
-    background-attachment:fixed;
-    background-position:center center;
-    background-size:cover;
+a {
+    color: #f05f40;
+    -webkit-transition: all .2s;
+    transition: all .2s
+}
+
+a:hover {
+    color: #f05f40
+}
+
+section {
+    padding: 6rem 0
+}
+
+.section-heading {
+    margin-top: 0;
+}
+
+header.ogtlanding {
+    padding-top: 0rem;
+    padding-bottom: calc(7rem - 56px);
+    background-image: url(../img/gt_default.png);
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
     height: 100%;
 }
-header.masthead hr{
-    margin-top:30px;
-    margin-bottom:30px
-}
-header.masthead h1{
-    font-size:2rem
-}
-header.masthead p{
-    font-weight:300
-}
-@media (min-width:768px){
-    header.masthead p{
-        font-size:1.15rem
-    }
-}
-@media (min-width:992px){
-    header.masthead{
-        height:100vh;
-        min-height:650px;
-        padding-top:0;
-        padding-bottom:0
-    }
-    header.masthead h1{
-        font-size:3rem
-    }
-}
-@media (min-width:1200px){
-    header.masthead h1{
-        font-size:4rem
-    }
-}
-.service-box{
-    max-width:400px
-}
-.portfolio-box{
-    position:relative;
-    display:block;
-    max-width:650px;
-    margin:0 auto
+
+header.masthead hr {
+    margin-top: 30px;
+    margin-bottom: 30px
 }
 
-.btn{
-    font-weight:700;
-    text-transform:uppercase;
-    border:none;
-    border-radius:300px;
-    font-family:'Open Sans','Helvetica Neue',Arial,sans-serif,Microsoft JhengHei
+header.masthead h1 {
+    font-size: 2rem
 }
-.btn-xl{
-    padding:1rem 2rem
+
+header.masthead p {
+    font-weight: 300
 }
-.btn-primary{
-    background-color:#037ef3;
-    border-color:#037ef3;
+
+@media (min-width:768px) {
+    header.masthead p {
+        font-size: 1.15rem
+    }
 }
-.btn-primary:active,.btn-primary:focus,.btn-primary:hover{
-    color:#fff;
-    background-color:#037ef3!important
+
+@media (min-width:992px) {
+    header.masthead {
+        height: 100vh;
+        min-height: 650px;
+        padding-top: 0;
+        padding-bottom: 0
+    }
+
+    header.masthead h1 {
+        font-size: 3rem
+    }
 }
-.btn-primary:active,.btn-primary:focus{
-    -webkit-box-shadow:0 0 0 .2rem rgba(2, 79, 151,.7)!important;
-    box-shadow:0 0 0 .2rem rgba(2, 79, 151,.7)!important
+
+@media (min-width:1200px) {
+    header.masthead h1 {
+        font-size: 4rem
+    }
 }
-.stat-wrap{
-   background: #0A8Ea0;
-   -webkit-display: flex;
-   -moz-display: flex;
-   -ms-display: flex;
-   -o-display: flex;
-   display: flex;
-   justify-content:space-between;
-   padding: 40px;
-   width: 100%;
+
+.service-box {
+    max-width: 400px
 }
-.stat-number{
+
+.portfolio-box {
+    position: relative;
+    display: block;
+    max-width: 650px;
+    margin: 0 auto
+}
+
+.btn {
+    font-weight: 700;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 300px;
+    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif, Microsoft JhengHei
+}
+
+.btn-xl {
+    padding: 1rem 2rem
+}
+
+.btn-primary {
+    background-color: #037ef3;
+    border-color: #037ef3;
+}
+
+.btn-primary:active,
+.btn-primary:focus,
+.btn-primary:hover {
+    color: #fff;
+    background-color: #037ef3 !important
+}
+
+.btn-primary:active,
+.btn-primary:focus {
+    -webkit-box-shadow: 0 0 0 .2rem rgba(2, 79, 151, .7) !important;
+    box-shadow: 0 0 0 .2rem rgba(2, 79, 151, .7) !important
+}
+
+.stat-wrap {
+    background: #0A8Ea0;
+    -webkit-display: flex;
+    -moz-display: flex;
+    -ms-display: flex;
+    -o-display: flex;
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    width: 100%;
+}
+
+.stat-number {
     font-family: sans-serif;
-   display: inline-block;
-   font-size:55px;
-   font-weight: 650;
-   color: white;
+    display: inline-block;
+    font-size: 55px;
+    font-weight: 650;
+    color: white;
 }
 
-.count-font{
-    font-family:Microsoft JhengHei;
+.count-font {
+    font-family: Microsoft JhengHei;
     color: white;
     font-size: 19px;
-    font-weight:650;
+    font-weight: 650;
 }
-.sdg-font{
+
+.sdg-font {
     color: #666666;
-    font-family:微軟正黑體;
+    font-family: 微軟正黑體;
     font-size: 18px;
 }
 
-.section-title{
-    font-family:Microsoft JhengHei;
+.section-title {
+    font-family: Microsoft JhengHei;
     color: #404040;
     font-size: 40px;
     font-weight: bold;
 }
-.section-text{
-   font-family:Microsoft JhengHei;
-   color: #666666;
-   font-size: 18px; 
+
+.section-text {
+    font-family: Microsoft JhengHei;
+    color: #666666;
+    font-size: 18px;
 }
-.ogvinfo-title{
-    font-family:Microsoft JhengHei;
+
+.ogvinfo-title {
+    font-family: Microsoft JhengHei;
     color: #666666;
     font-size: 40px;
     font-style: oblique;
     font-weight: bold;
 }
-.ogvinfo-text{
-   font-family:Microsoft JhengHei;
-   color: #666666;
-   font-size: 20px; 
+
+.ogvinfo-text {
+    font-family: Microsoft JhengHei;
+    color: #666666;
+    font-size: 20px;
 }
-.why-choose-text{
-    font-family:Microsoft JhengHei;
+
+.why-choose-text {
+    font-family: Microsoft JhengHei;
     font-size: 12px;
 }
-.line-height-35{
+
+.line-height-35 {
     line-height: 35px;
 }
-.line-height-40{
+
+.line-height-40 {
     line-height: 40px;
 }
 
-.section-grbacolor{
-    background-color:#e6e6e6
+.section-grbacolor {
+    background-color: #e6e6e6
 }
-.section-whbacolor{
-    background-color:#ffff
+
+.section-whbacolor {
+    background-color: #ffff
 }
-.section-applybacolor{
-    background-color:#f2f3f6
+
+.section-applybacolor {
+    background-color: #f2f3f6
 }
-.section-video{
-    padding: 0rem 
+
+.section-video {
+    padding: 0rem
 }
-.section-count{
+
+.section-count {
     padding: 1rem 0;
     background-color: #0A8EA0;
 }
 
-.header-font{
-    font-family:Microsoft JhengHei;
-    color:#f2f2f2;
+.header-font {
+    font-family: Microsoft JhengHei;
+    color: #f2f2f2;
     font-weight: 800;
 }
-.microfont{
+
+.microfont {
     font-family: Microsoft JhengHei;
 }
+
 p.fontsize {
     font-size: 20px;
 }
+
 /* Dropdown content (hidden by default) */
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
     font-family: Microsoft JhengHei;
-  min-width: 200px;
-    
+    min-width: 200px;
+
     font-size: 14px;
     font-weight: 800;
 
 }
+
 /* Links inside the dropdown */
 .dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
 }
 
 /* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #ddd;
+    background-color: #ddd;
 }
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
-  display: block;
+    display: block;
 }
 
-  .video-container {
+.video-container {
 
     position: relative;
 
@@ -266,15 +302,27 @@ p.fontsize {
     height: 100%;
 }
 
-.bounce-margin{
+.bounce-margin {
     margin-top: 100%;
 }
 
+.howto {
+    width: 60%;
+    height: 60%;
+    margin-top: 4rem;
+}
+
 @media screen and (max-width:480px) {
-    
+    .howto {
+        width: 95%;
+        height: 95%;
+    }
+
+
     header {
         margin: auto;
     }
+
     header.ogtlanding {
         padding-top: 10rem;
         padding-bottom: calc(10rem - 56px);
@@ -287,20 +335,21 @@ p.fontsize {
         width: 100%;
 
     }
+
     .header-font {
         font-size: 10px;
     }
 
     h1.fontsize {
-        font-size: 36px;
+        font-size: 24px;
         text-align: center;
-      
+
     }
 
     p.fontsize {
         font-size: 13px;
         text-align: center;
-       
+
     }
 
     .btn {
@@ -326,5 +375,9 @@ p.fontsize {
         margin-top: 0;
         margin-left: 10%;
 
+    }
+
+    .btn-mobile {
+        display: none;
     }
 }
