--- a/css/ogv.css
+++ b/css/ogv.css
@@ -303,11 +303,19 @@ p.fontsize {
 
     height: 100%;
 }
+.howto {
+    width: 10%;
+    height: 10%;
+    margin-top: 4rem;
+}
 
 
 @media screen and (max-width:480px) {
 
-    .header-bottom {}
+    .howto {
+        width: 100%;
+        height: 100%;
+    }
 
     header.ogvhead {
         padding-top: 10rem;
