--- a/css/joinus.css
+++ b/css/joinus.css
@@ -5,8 +5,11 @@ header.joinus-head {
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
-    opacity: 0.8;
     height: 100%;
+}
+
+a.content{
+    color:white;
 }
 
 @media screen and (max-width:480px) {
@@ -151,6 +154,7 @@ header.joinus-head {
     font-size: 22px;
     font-weight: 600;
     margin: 0 0 5px;
+    color: white;
 }
 
 .main-timeline .description {
@@ -158,6 +162,7 @@ header.joinus-head {
     letter-spacing: 1px;
     margin: 0;
     font-weight: 600;
+    color: white;
 }
 
 .main-timeline .timeline:nth-child(even):before {
