--- a/css/igt.css
+++ b/css/igt.css
@@ -412,10 +412,19 @@ p.five-reason-info {
     height: 50%;
     margin-bottom: 1rem;
 }
-.stepNum{
+
+.stepNum {
     font-size: 70px;
     font-weight: 800;
     color: #0A8EA0;
+}
+
+.partnership {
+    height: 100%;
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media screen and (max-width:480px) {
