--- a/css/oge.css
+++ b/css/oge.css
@@ -9,6 +9,11 @@ html {
     height: 100%
 }
 
+.section-grbacolor {
+    background-color: #e6e6e6;
+    padding: 5%;
+}
+
 body {
     font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif, Microsoft JhengHei
 }
