0908 form & igv updated

--- a/css/igv.css
+++ b/css/igv.css
@@ -433,6 +433,10 @@ p.five-reason-info {
     height: 45%;
     width: 45%;
 }
+.project_img1 {
+    height: 42.25%;
+    width: 42.25%;
+}
 
 .stepNum {
     font-size: 70px;
