--- a/css/ogt.css
+++ b/css/ogt.css
@@ -328,16 +328,11 @@ p.fontsize {
     }
 
     header.ogtlanding {
-        padding-top: 10rem;
-        padding-bottom: calc(10rem - 56px);
         background-image: url(../img/gt_default.png);
-        background-position: center center;
-        background-size: cover;
-        background-attachment: fixed;
-        opacity: 0.9;
-        height: 100%;
+        background-position: top;
+        background-size: contain;
         width: 100%;
-
+        height: 35%;
     }
 
     .header-font {
