--- a/css/ogv.css
+++ b/css/ogv.css
@@ -331,16 +331,11 @@ p.fontsize {
     }
 
     header.ogvhead {
-        padding-top: 10rem;
-        padding-bottom: calc(10rem - 56px);
         background-image: url(../img/DSCF5939.JPG);
-        background-position: center center;
-        background-size: cover;
-        background-attachment: fixed;
-        opacity: 0.9;
-        height: 100%;
+        background-position: top;
+        background-size: contain;
         width: 100%;
-
+        height: 35%;
     }
 
     h1.fontsize {
