--- a/css/igv.css
+++ b/css/igv.css
@@ -475,14 +475,12 @@ p.five-reason-info {
     }
 
     header.igvlanding {
-        padding-top: 10rem;
-        padding-bottom: calc(10rem - 56px);
         background-image: url(../img/igvheader.jpg);
-        background-position: center center;
-        background-size: cover;
-        background-attachment: fixed;
+        background-position: top;
+        background-size: contain;
+        width: 100%;
+        height: 35%;
         opacity: 0.9;
-
     }
 
     .igv-img-landing {
