--- a/css/igt.css
+++ b/css/igt.css
@@ -433,16 +433,11 @@ p.five-reason-info {
     }
 
     header.igtlanding {
-        padding-top: 10rem;
-        padding-bottom: calc(10rem - 56px);
         background-image: url(../img/igtheader.jpg);
-        background-position: center center;
-        background-size: cover;
-        background-attachment: fixed;
-        opacity: 0.9;
-        height: 100%;
+        background-position: top;
+        background-size: contain;
         width: 100%;
-
+        height: 35%;
     }
 
     h1.fontsize {
