--- a/css/ogv.css
+++ b/css/ogv.css
@@ -331,7 +331,7 @@ p.fontsize {
     }
 
     header.ogvhead {
-        background-image: url(../img/DSCF5939.JPG);
+        background-image: url(../img/ogv-header.jpg);
         background-position: top;
         background-size: contain;
         width: 100%;
