--- a/css/recruitment.css
+++ b/css/recruitment.css
@@ -1,5 +1,7 @@
-body{
+body {
     background-color: #f2f3f6;
+    font-family: Microsoft JhengHei;
+
 }
 
 table.fixed {
@@ -17,6 +19,23 @@ table.fixed {
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    
 
+
+}
+
+.btn-primary {
+    background-color: #037ef3;
+    border-color: #037ef3;
+    font-family: Microsoft JhengHei;
+}
+
+.btn-primary:active,
+.btn-primary:focus,
+.btn-primary:hover {
+    color: #fff;
+    background-color: #4ea9fd !important;
+}
+
+h3 {
+    font-family: Microsoft JhengHei;
 }
