1016 update 1.1 index header

--- a/css/igv.css
+++ b/css/igv.css
@@ -468,6 +468,47 @@ p.five-reason-info {
     display: none;
 }
 
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: none;
+    background-color: #ccc;
+    width: 100%;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: #ccc;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+    color: white;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #f6a355;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #f48924;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 50px;
+    border: 1px solid #ccc;
+    border-top: none;
+    height: 400px;
+    margin-top: 5%;
+}
+
 
 @media screen and (max-width:480px) {
     header {
